# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "executable_build_options",
    srcs = ["executable_build_options.cc"],
    hdrs = ["executable_build_options.h"],
    deps = [
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:execution_options_util",
        "//zkx:shape_util",
        "//zkx:zkx_cc_proto",
        "//zkx/pjrt:compile_options_cc_proto",
        "//zkx/pjrt/distributed:key_value_store_interface",
        "//zkx/service:compilation_environments",
        "//zkx/service:computation_placer",
        "//zkx/stream_executor:device_memory_allocator",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_unittest(
    name = "client_unittests",
    srcs = ["executable_build_options_unittest.cc"],
    deps = [
        ":executable_build_options",
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:protobuf_util",
        "//zkx/service:test_compilation_environment_cc_proto",
        "@com_google_absl//absl/status:status_matchers",
    ],
)
