load("//bazel:zkx.bzl", "if_aarch64", "if_x86_32", "if_x86_64")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "jit_compiler",
    srcs = ["jit_compiler.cc"],
    hdrs = ["jit_compiler.h"],
    deps = [
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/log:check",
        "@llvm-project//llvm:OrcJIT",
    ] + if_x86_32([
        "@llvm-project//llvm:X86CodeGen",
    ]) + if_x86_64([
        "@llvm-project//llvm:X86CodeGen",
    ]) + if_aarch64([
        "@llvm-project//llvm:AArch64CodeGen",
    ]),
)

zkx_cc_unittest(
    name = "compiler_unittests",
    srcs = ["jit_compiler_unittest.cc"],
    data = ["tests/add.ll"],
    deps = [":jit_compiler"],
)
