load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "codegen_utils",
    srcs = ["codegen_utils.cc"],
    hdrs = ["codegen_utils.h"],
    deps = [
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:Support",
    ],
)

zkx_cc_library(
    name = "mlir_utils",
    srcs = ["mlir_utils.cc"],
    hdrs = ["mlir_utils.h"],
    deps = [
        "//zkx:comparison_util",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/math/elliptic_curve/bn/bn254:fr",
        "//zkx/math/elliptic_curve/bn/bn254:g1",
        "//zkx/math/elliptic_curve/bn/bn254:g2",
        "//zkx/math/field/babybear",
        "//zkx/math/field/goldilocks",
        "//zkx/math/field/koalabear",
        "//zkx/math/field/mersenne31",
        "//zkx/service/llvm_ir:llvm_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:LLVMCommonConversion",
        "@llvm-project//mlir:SparseTensorDialect",
        "@zkir//zkir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM",
        "@zkir//zkir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@zkir//zkir/Dialect/Field/Conversions/ExtFieldToLLVM",
        "@zkir//zkir/Dialect/Field/IR:Field",
        "@zkir//zkir/Dialect/ModArith/IR:ModArith",
    ],
)
