# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "codegen_utils",
    srcs = ["codegen_utils.cc"],
    hdrs = ["codegen_utils.h"],
    deps = [
        ":mlir_utils",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:Support",
        "@prime_ir//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
    ],
)

zkx_cc_library(
    name = "mlir_utils",
    srcs = ["mlir_utils.cc"],
    hdrs = ["mlir_utils.h"],
    deps = [
        "//zkx:comparison_util",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/service/llvm_ir:llvm_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:LLVMCommonConversion",
        "@llvm-project//mlir:SparseTensorDialect",
        "@prime_ir//prime_ir/Dialect/EllipticCurve/Conversions/EllipticCurveToLLVM",
        "@prime_ir//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@prime_ir//prime_ir/Dialect/Field/Conversions/ExtFieldToLLVM",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
        "@prime_ir//prime_ir/Dialect/ModArith/IR:ModArith",
        "@zk_dtypes//zk_dtypes:all_types",
    ],
)
